--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: github.com
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
       - name: Set image tag
         id: image-tag
         run: |
@@ -38,4 +38,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: github.com/facorazza/passwords2bitwarden:${{ steps.image-tag.outputs.IMAGE_TAG }}
+          tags: ghcr.io/facorazza/passwords2bitwarden:${{ steps.image-tag.outputs.IMAGE_TAG }}
